[gd_scene load_steps=11 format=3 uid="uid://5871bs5w0s0u"]

[ext_resource type="Script" path="res://HUD/player_hp.gd" id="1_cn0im"]
[ext_resource type="Texture2D" uid="uid://b4dsw04dds0su" path="res://assets/hud/healthbar_overlay.png" id="2_pfrmy"]
[ext_resource type="Texture2D" uid="uid://dwyq0qjlpq0mv" path="res://assets/hud/healthbar_fill.png" id="3_koitb"]
[ext_resource type="Texture2D" uid="uid://dmrhkrxrsfv2x" path="res://assets/hud/shieldbar_overlay.png" id="5_kwpl0"]
[ext_resource type="Texture2D" uid="uid://ckb7p0ywhmsxj" path="res://assets/hud/shieldbar_fill.png" id="6_r0t1c"]
[ext_resource type="PackedScene" uid="uid://bvkj51j6qwbs2" path="res://HUD/enemy_icon.tscn" id="8_p64lb"]
[ext_resource type="Script" path="res://HUD/minimap.gd" id="8_tw3p4"]
[ext_resource type="Script" path="res://HUD/score.gd" id="8_xsint"]
[ext_resource type="Script" path="res://HUD/collision_overlay.gd" id="9_7dxvv"]
[ext_resource type="Texture2D" uid="uid://qtwe4dpeft11" path="res://assets/hud/player_icon.png" id="9_eoj5s"]

[node name="HUD" type="CanvasLayer"]

[node name="HPShadow" type="ColorRect" parent="."]
offset_right = 117.0
offset_bottom = 43.0
color = Color(0, 0, 0, 0.560784)

[node name="PlayerHP" type="Control" parent="."]
layout_mode = 3
anchor_left = -0.903
anchor_top = -1.29
anchor_right = -0.285
anchor_bottom = -0.784
offset_left = 577.92
offset_top = 464.4
offset_right = 299.4
offset_bottom = 325.24
script = ExtResource("1_cn0im")

[node name="HealthBar" type="TextureProgressBar" parent="PlayerHP"]
layout_mode = 1
anchors_preset = -1
offset_left = 2.0
offset_top = 2.0
offset_right = 113.0
offset_bottom = 10.0
texture_under = ExtResource("2_pfrmy")
texture_progress = ExtResource("3_koitb")

[node name="ShieldBar" type="TextureProgressBar" parent="PlayerHP"]
layout_mode = 1
anchors_preset = -1
offset_left = 2.0
offset_top = 11.0
offset_right = 113.0
offset_bottom = 19.0
texture_under = ExtResource("5_kwpl0")
texture_progress = ExtResource("6_r0t1c")

[node name="Minimap" type="SubViewportContainer" parent="."]
custom_minimum_size = Vector2(120, 67.5)
offset_left = 520.0
offset_right = 640.0
offset_bottom = 68.0
script = ExtResource("8_tw3p4")
enemy_icon_scene = ExtResource("8_p64lb")

[node name="MinimapShadow" type="ColorRect" parent="Minimap"]
custom_minimum_size = Vector2(120, 67.5)
layout_mode = 2
color = Color(0, 0, 0, 0.4)

[node name="MinimapViewport" type="SubViewport" parent="Minimap"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(120, 68)
render_target_update_mode = 4

[node name="MinimapCamera" type="Camera2D" parent="Minimap/MinimapViewport"]
anchor_mode = 0

[node name="MinimapWorld" type="Node2D" parent="Minimap/MinimapViewport"]

[node name="PlayerIcon" type="Sprite2D" parent="Minimap/MinimapViewport/MinimapWorld"]
texture = ExtResource("9_eoj5s")

[node name="CollisionOverlay" type="Node2D" parent="Minimap/MinimapViewport/MinimapWorld"]
script = ExtResource("9_7dxvv")

[node name="Score" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 117.0
offset_bottom = 43.0
script = ExtResource("8_xsint")

[node name="ScoreLabel" type="Label" parent="Score"]
layout_mode = 0
offset_left = 2.0
offset_top = 21.0
offset_right = 113.0
offset_bottom = 44.0
text = "Score: 0"
